# Erg-Nerd

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  dev.py  pyproject.toml
assets/: logo_light_bg.sketch
components/: concept2_sync.py  date_slider.py  ergnerd_animation.py  event_page.py  hyperdiv_extensions.py  interval_tab.py  intervals_page.py  performance_chart.py  performance_chart_builder.py  performance_chart_plugin.py  performance_page.py  performance_tab.py  power_curve_animation.py  power_curve_chart_builder.py  power_curve_chart_config.py  power_curve_chart_plugin.py  power_curve_chart_prediction_datasets.py  power_curve_page.py  power_curve_pipeline.py  power_curve_state.py  power_curve_timeline.py  power_curve_workouts.py  profile_page.py  profile_tab.py  public_banner.py  race_chart_plugin.py  race_page.py  rank_chart_plugin.py  rank_distribution.py  rank_page.py  rank_ranking_modal.py  ranked_chart_builder.py  ranked_filters.py  ranked_formatters.py  ranked_predictions.py  ranked_tab.py  reference_watts_loader.py  rowing_animation.py  rowing_chart.py  session_chart_builder.py  (+19 more)
docs/: critical_power.md  heartrate.md  hyperdiv_cheatsheet.md  info_storage.md  intervals.md  intervals_page.md  performance_page.md  power_curve_page.md  prediction.md  profile.md  race_page.md  rank_page.md  session_view.md  sessions_chart.md  volume_chart.md  volume_page.md  volume_tab.md  workout_page.md  workout_view.md
services/: concept2.py  concept2_rankings.py  concept2_rankings_index.py  concept2_records.py  critical_power_model.py  formatters.py  (+15 more)
(+12 files in other folders)
